--- a/style.css
+++ b/style.css
@@ -61,16 +61,23 @@ body {
   text-transform: uppercase;
   padding: 1.2rem 2.4rem;
   border-radius: 9px;
-  background-color: #f59f00;
+  background-color: #74b816;
   color: #fff;
   font-weight: 600;
-  cursor: pointer;
   transition: all 0.4s;
-  left: 5%;
+  left: 45%;
+  top: 37%;
+  opacity: 0;
 }
 
 .try-again:hover {
-  background-color: #e67700;
+  background-color: #5c940d;
+}
+
+.try-again.visible {
+  opacity: 1;
+  transition: all 0.5s ease-in;
+  cursor: pointer;
 }
 
 .heading {
@@ -139,7 +146,7 @@ body {
   font-weight: 600;
 }
 
-.front.result-icon {
+.visible.result-icon {
   opacity: 1;
   transition: all 0.5s ease-in;
 }
