--- a/css/queries.css
+++ b/css/queries.css
@@ -60,3 +60,76 @@
     height: 8rem;
   }
 }
+
+/* BELOW 432 PX */
+@media (max-width: 27em) {
+  .section {
+    padding-top: 2.8rem;
+    padding-bottom: 2.8rem;
+  }
+
+  .heading {
+    font-size: 2.6rem;
+  }
+
+  .game-description {
+    font-size: 1.4rem;
+  }
+
+  .choice-icon {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .player {
+    font-size: 1.8rem;
+  }
+
+  .player-score,
+  .computer-score {
+    font-size: 2.8rem;
+  }
+
+  .result {
+    font-size: 2rem;
+  }
+
+  .result-icon {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .try-again {
+    font-size: 1.4rem;
+    padding: 1rem 2rem;
+  }
+
+  .sml {
+    row-gap: 1.8rem;
+  }
+}
+
+/* BELOW 400 PX */
+@media (max-width: 25em) {
+  .try-again {
+    left: 39%;
+    top: 36%;
+  }
+}
+
+/* BELOW 384 PX */
+@media (max-width: 24em) {
+  .game-description {
+    font-size: 1.2rem;
+  }
+
+  .choice-icon {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .try-again {
+    left: 38%;
+    top: 37%;
+  }
+}
