--- a/css/queries.css
+++ b/css/queries.css
@@ -102,6 +102,7 @@
   .try-again {
     font-size: 1.4rem;
     padding: 1rem 2rem;
+    top: 36%;
   }
 
   .sml {
@@ -111,9 +112,17 @@
 
 /* BELOW 400 PX */
 @media (max-width: 25em) {
+  .grid {
+    column-gap: 2.6rem;
+  }
+
   .try-again {
     left: 39%;
-    top: 36%;
+    top: 100%;
+  }
+
+  .btn-choice {
+    padding: 2rem;
   }
 }
 
@@ -130,6 +139,5 @@
 
   .try-again {
     left: 38%;
-    top: 100%;
   }
 }
