--- a/css/queries.css
+++ b/css/queries.css
@@ -1,23 +1,17 @@
-/* BELOW 1072 PX */
-@media (max-width: 67em) {
-  .try-again {
-    left: 43%;
+/* BELOW 720 PX */
+@media (max-width: 45em) {
+  html {
+    font-size: 56.25%;
   }
-}
 
-/* BELOW 848 PX */
-@media (max-width: 53em) {
-  .try-again {
-    left: 41%;
+  .choice-icon {
+    width: 10rem;
+    height: 10rem;
   }
 }
 
 /* BELOW 640 PX */
 @media (max-width: 40em) {
-  html {
-    font-size: 56.25%;
-  }
-
   .heading {
     font-size: 3.6rem;
   }
@@ -32,53 +26,7 @@
   }
 
   .result {
-    font-size: 2.8rem;
-  }
-
-  .try-again {
-    font-size: 1.6rem;
-  }
-}
-
-/* BELOW 528 PX */
-@media (max-width: 33em) {
-  html {
-    font-size: 50%;
-  }
-
-  .grid {
-    row-gap: 3.6rem;
-  }
-
-  .try-again {
-    left: 40%;
-    top: 33%;
-  }
-
-  .choice-icon {
-    width: 8rem;
-    height: 8rem;
-  }
-}
-
-/* BELOW 432 PX */
-@media (max-width: 27em) {
-  .section {
-    padding-top: 2.8rem;
-    padding-bottom: 2.8rem;
-  }
-
-  .heading {
     font-size: 2.6rem;
-  }
-
-  .game-description {
-    font-size: 1.4rem;
-  }
-
-  .choice-icon {
-    width: 6rem;
-    height: 6rem;
   }
 
   .player {
@@ -87,11 +35,86 @@
 
   .player-score,
   .computer-score {
+    font-size: 3.6rem;
+  }
+
+  .result-icon {
+    width: 6rem;
+    height: 6rem;
+  }
+}
+
+/* BELOW 528 PX */
+@media (max-width: 33em) {
+  .grid {
+    row-gap: 3.6rem;
+  }
+
+  .sml {
+    row-gap: 2.2rem;
+  }
+
+  .heading {
     font-size: 2.8rem;
   }
 
+  .game-description {
+    font-size: 1.4rem;
+  }
+
+  .btn-choice {
+    padding: 2rem;
+  }
+
+  .choice-icon {
+    width: 7rem;
+    height: 7rem;
+  }
+
   .result {
-    font-size: 2rem;
+    font-size: 1.8rem;
+  }
+
+  .player-score,
+  .computer-score {
+    font-size: 2.8rem;
+  }
+
+  .try-again {
+    font-size: 1.4rem;
+    padding: 1rem 2rem;
+  }
+}
+
+/* BELOW 464 PX */
+@media (max-width: 29em) {
+  html {
+    font-size: 50%;
+  }
+}
+
+/* BELOW 384 PX */
+@media (max-width: 24em) {
+  .grid {
+    row-gap: 2.8rem;
+  }
+
+  .grid--3-cols.smaller-gap {
+    column-gap: 1.8rem;
+  }
+
+  .heading {
+    font-size: 2.4rem;
+  }
+
+  .choice-icon {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .section {
+    padding-top: 2.8rem;
+    padding-bottom: 2.8rem;
   }
 
   .result-icon {
@@ -100,44 +123,6 @@
   }
 
   .try-again {
-    font-size: 1.4rem;
-    padding: 1rem 2rem;
-    top: 36%;
-  }
-
-  .sml {
-    row-gap: 1.8rem;
-  }
-}
-
-/* BELOW 400 PX */
-@media (max-width: 25em) {
-  .grid {
-    column-gap: 2.6rem;
-  }
-
-  .try-again {
-    left: 39%;
-    top: 100%;
-  }
-
-  .btn-choice {
-    padding: 2rem;
-  }
-}
-
-/* BELOW 384 PX */
-@media (max-width: 24em) {
-  .game-description {
     font-size: 1.2rem;
-  }
-
-  .choice-icon {
-    width: 5rem;
-    height: 5rem;
-  }
-
-  .try-again {
-    left: 38%;
   }
 }
