--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   font-weight: 500;
   color: #495057;
   background-color: #fff;
+  margin: auto;
 }
 
 .container {
@@ -148,11 +149,3 @@ body {
   cursor: pointer;
 }
 
-/* FIX FOR SAFARI ON IPHONES */
-.safari-fix {
-  text-align: center;
-}
-
-.safari-fix .btn-choice {
-  display: inline-block;
-}
